Footer alignment issue addressed
As of now pending:
At around 1000 resolution the frames overlapping. Fix that and then validate W3C for both html and css

--- a/Style.css
+++ b/Style.css
@@ -420,7 +420,7 @@ width: 500px;
     display: flex;
     max-height:none;
     width: 92%;
-    column-gap: 5px;
+    column-gap: 50px;
     margin-left: 3%;
     border-radius: 15px;
     margin-bottom: 5%;
@@ -450,7 +450,7 @@ width: 500px;
   
    .bottomimage-1,.bottomimage-2,.bottomimage-3,.bottomimage-4,.bottomimage-5,.bottomimage-6{
     display: flex;
-    width: 90%;
+    width: 100%;
     border-top-right-radius: 20px;
     border-top-left-radius: 20px;
     height: 410px;
@@ -477,7 +477,7 @@ width: 500px;
     background-color:rgb(255, 255, 255);
     border-bottom-right-radius: 20px;
     border-bottom-left-radius: 20px;
-    width: 270px;
+    /* width: 270px; */
     padding-left: 20px;
     border-color: rgb(239, 244, 235);
     border-style:solid;
@@ -494,7 +494,7 @@ width: 500px;
       font-size: 14px;
       background-color: #f4f4f4;
       align-items: start;
-     
+
     }
     .footer > * {
       flex:  1 100%;
@@ -525,8 +525,9 @@ width: 500px;
     
     .footer__nav {
       display: flex;
-      flex-flow: row wrap;
+      /* flex-flow: row wrap; */
       margin-left: 5%;
+      flex-direction: row;
     }
     
     .footer__nav > * {
@@ -545,8 +546,8 @@ width: 500px;
       column-gap: 1.25em;
       
     }
-    
-    @media screen and (min-width: 40.375em) {
+     
+    @media screen and (max-width: 700px){
       .footer__nav > * {
         flex: 1;
       }
@@ -554,9 +555,12 @@ width: 500px;
       .footer__addr {
         flex: 1 0px;
       }
+      
       .footer__nav {
         flex: 2 0px;
-      }
+        display: flex;
+        flex-direction: column;
+        }
 
       .nav__ul a {
         color: #010101;
@@ -566,22 +570,23 @@ width: 500px;
     @media (max-width: 800px) {
       .nav__ul a {
         color: #0b0a0a;
-        font-size:x-large;
-        font-weight: 300;
+        font-size:large;
+        font-weight: 200;
     }
 
       .nav__title {
         margin-top: 20px;
         /* margin-left: 5%; */
         color: #0b0a0a;
-        font-size:30px;
+        font-size:20px;
         font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-        font-weight: 900;
+        font-weight: 500;
         line-height: 3em;
     }
       
       .footer li {
         line-height: 4em;
+
     }
       
       .FirstGridContainer{
@@ -590,6 +595,7 @@ width: 500px;
       padding-bottom: 20px;
       width: 95%;
     }
+    
     .SecondGridContainer{
       flex-direction: row;
       /* height: max-content; */
@@ -615,7 +621,7 @@ width: 500px;
       row-gap: 10px;
     }
     .oldporttext{
-      width: 85%;
+      width: 96%;
       }
       
       .Logoandnavbar{
@@ -646,25 +652,18 @@ width: 500px;
       nav ul li:hover{
         border-bottom: 2px solid blue;
         border-width: 5px;
-        a {
-
-        }
-  
-        }
+           }
         
-      }
-      
-
       nav ul{
         display: flex;
         /* justify-content: center; */
         margin: 0;
         /* font-size: 500; */
       }
-body{
+/* body{
   padding-left: 0;
   padding-right: 0;
-}
+} */
       .content-2{
         margin-bottom: 30px;
       }
@@ -681,7 +680,9 @@ body{
       font-size: 20px;
      }
 .bottomimage-1, .bottomimage-2, .bottomimage-3, .bottomimage-4,.bottomimage-5, .bottomimage-6{
-  height: 400px;
+  height: 300px;
 }
 
-}
+
+
+    }
